--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/ferna/scoop/apps/godot-mono/current/godot-mono.exe"
+executable_path="C:/Users/Kristofer/Downloads/Godot_v4.3-dev5_mono_win64/Godot_v4.3-dev5_mono_win64/Godot_v4.3-dev5_mono_win64.exe"
 
 [debug_options]
 
@@ -9,4 +9,5 @@ run_reload_scripts=true
 
 [dialog_bounds]
 
-export=Rect2(420, 224, 900, 637)
+project_settings=Rect2(4350, 190, 900, 700)
+export=Rect2(4350, 190, 900, 726)
