--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -40,3 +40,7 @@ StaticBody3D:scale=true
 
 picker_shape=3
 recent_presets=PackedColorArray(0, 1, 1, 1, 0, 1, 0.101961, 1, 0, 0.313726, 0.101961, 1)
+
+[script_setup]
+
+last_selected_language="C#"
