--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -35,6 +35,7 @@ CharacterBody3D:scale=true
 MeshInstance3D:scale=true
 CollisionShape3D:scale=true
 StaticBody3D:scale=true
+Marker3D:scale=true
 
 [color_picker]
 
