--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -7,6 +7,19 @@ use_advanced_connections=false
 
 run_live_debug=true
 run_reload_scripts=true
+run_main_feature_tags=""
+multiple_instances_enabled=true
+run_instances_config=Array[Dictionary]([{
+"arguments": "",
+"features": "",
+"override_args": false,
+"override_features": false
+}, {
+"arguments": "",
+"features": "",
+"override_args": false,
+"override_features": false
+}])
 
 [dialog_bounds]
 
