--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -58,6 +58,8 @@ Camera3D:scale=true
 BoneAttachment3D:scale=true
 RayCast3D:scale=true
 RigidBody3D:scale=true
+AudioStreamPlayer3D:scale=true
+TextureProgressBar:scale=true
 
 [color_picker]
 
