--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -60,6 +60,7 @@ RayCast3D:scale=true
 RigidBody3D:scale=true
 AudioStreamPlayer3D:scale=true
 TextureProgressBar:scale=true
+Sprite2D:scale=true
 
 [color_picker]
 
